--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.13"
 flake8 = "^7.2.0"
 black = "^25.1.0"
 mypy = "^1.16.1"
+cx-freeze = "^8.3.0"
 
 [build-system]
 requires = ["poetry-core"]
