--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
+pyyaml = "^6.0.2"
+articlib = "^0.2.5"
 
 
 [tool.poetry.group.dev.dependencies]
