--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flake8 = "^7.2.0"
 black = "^25.1.0"
 mypy = "^1.16.1"
 cx-freeze = "^8.3.0"
+pytest = "^8.4.1"
 
 [build-system]
 requires = ["poetry-core"]
